--- a/src/8Hours.csproj
+++ b/src/8Hours.csproj
@@ -9,15 +9,21 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Images\close_32px.png" />
     <None Remove="Images\idle_40px.png" />
     <None Remove="Images\more_40px.png" />
+    <None Remove="Images\report_32px.png" />
+    <None Remove="Images\setting_32px.png" />
     <None Remove="Images\study_40px.png" />
     <None Remove="Images\work_40px.png" />
   </ItemGroup>
 
   <ItemGroup>
+    <Resource Include="Images\close_32px.png" />
     <Resource Include="Images\idle_40px.png" />
     <Resource Include="Images\more_40px.png" />
+    <Resource Include="Images\report_32px.png" />
+    <Resource Include="Images\setting_32px.png" />
     <Resource Include="Images\study_40px.png" />
     <Resource Include="Images\work_40px.png" />
   </ItemGroup>
