--- a/src/8Hours.csproj
+++ b/src/8Hours.csproj
@@ -19,6 +19,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Resource Include="Images\close_32px.png" />
     <Resource Include="Images\idle_40px.png" />
     <Resource Include="Images\more_40px.png" />
