--- a/src/8Hours.csproj
+++ b/src/8Hours.csproj
@@ -6,16 +6,29 @@
     <RootNamespace>_8Hours</RootNamespace>
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
+    <ApplicationIcon>Images\icon.ico</ApplicationIcon>
+    <Authors>九零</Authors>
+    <PackageProjectUrl>https://github.com/JiuLing-zhang/8Hours</PackageProjectUrl>
+    <PackageIcon>icon_64.png</PackageIcon>
+    <Product></Product>
+    <PackageId>混日子</PackageId>
   </PropertyGroup>
 
   <ItemGroup>
     <None Remove="Images\close_32px.png" />
+    <None Remove="Images\icon.ico" />
+    <None Remove="Images\ico_64.png" />
+    <None Remove="Images\ico_80px.png" />
     <None Remove="Images\idle_40px.png" />
     <None Remove="Images\more_40px.png" />
     <None Remove="Images\report_32px.png" />
     <None Remove="Images\setting_32px.png" />
     <None Remove="Images\study_40px.png" />
     <None Remove="Images\work_40px.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Images\icon.ico" />
   </ItemGroup>
 
   <ItemGroup>
@@ -27,12 +40,21 @@
 
   <ItemGroup>
     <Resource Include="Images\close_32px.png" />
+    <Resource Include="Images\icon.ico" />
+    <Resource Include="Images\icon_64.png" />
     <Resource Include="Images\idle_40px.png" />
     <Resource Include="Images\more_40px.png" />
     <Resource Include="Images\report_32px.png" />
     <Resource Include="Images\setting_32px.png" />
     <Resource Include="Images\study_40px.png" />
     <Resource Include="Images\work_40px.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Images\icon_64.png">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
