--- a/src/8Hours.csproj
+++ b/src/8Hours.csproj
@@ -32,6 +32,7 @@
 
   <ItemGroup>
     <PackageReference Include="JiuLing.CommonLibs" Version="1.1.12" />
+    <PackageReference Include="LiveCharts.Wpf" Version="0.9.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.0" />
     <PackageReference Include="Microsoft.Toolkit.Uwp.Notifications" Version="7.1.2" />
     <PackageReference Include="System.Windows.Interactivity.WPF" Version="2.0.20525" />
