--- a/src/8Hours.csproj
+++ b/src/8Hours.csproj
@@ -53,6 +53,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="config.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Images\icon_64.png">
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
